# mage

./: .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml  x.py
grammars/: axis.mage  bolt.mage  calc.mage  mage.mage  magedown.mage  nomad.mage  python.mage  revolv.mage  rust.mage
lkg/magelang/: cli.py  main.py  test_util.py
lkg/magelang/passes/: __init__.py  mage_extract_prefixes.py  revolv_to_python.py
output/python/python/: test_cst.py
pkg/stable/: LICENSE.txt  pyproject.toml
pkg/stable/src/magelang/: __main__.py  eval.py  test_ast.py  test_runtime.py
pkg/stable/src/magelang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pkg/stable/src/magelang/lang/mage/: constants.py
pkg/stable/src/magelang/lang/python/: cst.py
pkg/stable/src/magelang/lang/revolv/: ast.py
pkg/stable/src/magelang/passes/: mage_check_overlapping_charset_intervals.py  mage_check_token_no_parse.py  mage_check_undefined.py  revolv_lift_assign_expr.py  revolv_to_rust.py
scripts/: gen-pipe.py  gen-pipeline.py  minimize-test-input.txt  minimize.cc
src/magelang/: __init__.py  __main__.py  analysis.py  ast.py  cli.py  constants.py  emitter.py  eval.py  fuzz.py  genparser.py  graph.py  helpers.py  intervaltree.py  logging.py  machine.py  main.py  manager.py  names.json  parser.py  prefix.py  reduce.py  repr.py  runtime.py  scanner.py  test_analysis.py  test_ast.py  test_grammars.py  test_graph.py  test_machine.py  treespec.py  util.py
src/magelang/codegen/: cxx.py  python.py
src/magelang/generator/: __init__.py
src/magelang/ir/: __init__.py  ast.py  constants.py  syntaxtree.py
src/magelang/passes/: __init__.py  add_prefix.py  axis_lift_assign_expr.py  axis_to_python.py  axis_to_rust.py  check_neg_charset_intervals.py  check_overlapping_charset_intervals.py  check_token_no_parse.py  check_undefined.py  extract_literals.py  extract_prefixes.py  inline.py  insert_magic_rules.py  insert_skip.py  ir_to_python.py  mage_add_prefix.py  mage_check_neg_charset_intervals.py  mage_check_overlapping_charset_intervals.py  mage_check_token_no_parse.py  mage_check_undefined.py  mage_distill.py  mage_extract_literals.py  mage_extract_prefixes.py  mage_flatten_grammars.py  mage_hide_lookaheads.py  mage_inline.py  mage_insert_magic_rules.py  mage_insert_skip.py  mage_reduce_list_expr.py  mage_remove_hidden.py  mage_resolve.py  (+25 more)
templates/python/: _helpers.py  cst.py.tply  lexer.py.tply
tests/: test_passes.py
treesitter/: CMakeLists.txt  Cargo.toml  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
treesitter/bindings/c/: tree-sitter-mage.pc.in
treesitter/bindings/c/tree_sitter/: tree-sitter-mage.h
treesitter/bindings/go/: binding.go  binding_test.go
treesitter/bindings/node/: binding.cc  index.js
treesitter/bindings/python/tests/: test_binding.py
treesitter/bindings/python/tree_sitter_mage/: __init__.py  binding.c
treesitter/bindings/rust/: build.rs  lib.rs
treesitter/bindings/swift/TreeSitterMageTests/: TreeSitterMageTests.swift
treesitter/src/: grammar.json  node-types.json  parser.c
(+51 files in other folders)
