[package]
name = "tree-sitter-mage"
description = "A lexer/parser generator for a growing number of languages"
version = "0.1.0"
authors = ["Sam Vervaeck <samvv@pm.me>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "mage"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/samvv/mage"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.2"
