# This file is programmatically overwritten. Do not attempt to format or add comments.
[project]
name = "magelang"
version = "0.1.1"
description = "A modern lexer/parser generator for a growing number of languages"
readme = "README.md"
requires-python = ">=3.8"
keywords = [ "text-analysis", "scanner", "lexer", "parser", "code-generator",]
classifiers = [ "Development Status :: 3 - Alpha", "Intended Audience :: Developers", "Topic :: Software Development :: Code Generators", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3 :: Only",]
dependencies = [ "marko", "intervaltree",]
[[project.authors]]
name = "Sam Vervaeck"
email = "samvv@pm.me"

[[project.maintainers]]
name = "Sam Vervaeck"
email = "samvv@pm.me"

[build-system]
requires = [ "setuptools>=43.0.0",]
build-backend = "setuptools.build_meta"

[project.license]
file = "LICENSE.txt"

[project.optional-dependencies]
dev = [ "check-manifest", "GitPython",]
test = [ "pytest", "coverage",]

[project.urls]
Homepage = "https://github.com/samvv/mage"
"Bug Reports" = "https://github.com/samvv/mage/issues"
Source = "https://github.com/samvv/mage/"

[project.scripts]
mage = "magelang:main"

[tool.setuptools.package-data]
sample = [ "*.dat",]
